examples/test/testpolicy12621.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12621
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key38: value38
      key13: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value11
          key48: value7
      podSelector:
        matchLabels:
          key10: value29
          key19: value35
